--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,49 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <script src="https://kit.fontawesome.com/6ec8da1d60.js" crossorigin="anonymous"></script>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="d-flex flex-column vh-100">
+    <header>
+      <nav class="navbar navbar-expend-lg navbar-dark bg-dark">
+        <div class="container">
+　　　　　<%= link_to 'Bookers', root_path, class:'navbar-brand' %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expended="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li><i class="fas fa-home" aria-hidden="true"></i><%= link_to 'Home', user_path(current_user.id), class:'nav-link text-light' %></li>
+                <li><i></i><%= link_to 'Users', users_path, class:'nav-link text-light' %></li>
+                <li><i></i><%= link_to 'Books', books_path, class:'nav-link text-light' %></li>
+                <li><i></i><%= link_to 'Log out', destroy_user_session_path, method: :delete, class:'nav-link text-light' %></li>
+              <% else %>
+                <li><i class="fas fa-home" aria-hidden="true"></i><%= link_to 'Home', root_path, class:'nav-link text-light' %></li>
+                <li><i class="fas fa-link" aria-hidden="true"></i><%= link_to 'About', about_path, class:'nav-link text-light' %></li>
+                <li><i class="fas fa-user-plus" aria-hidden="true"></i><%= link_to 'Sign up', new_user_registration_path, class:'nav-link text-light' %></li>
+                <li><i class="fas fa-sign-in-alt" aria-hidden="true"></i><%= link_to 'Log in', new_user_session_path, class:'nav-link text-light' %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main><%= yield %></main>
+    <footer>
+      <div class="container mt-5">
+        <div class="row">
+          <div class="mx-auto">
+            <p>CopyRight Inflatop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
