--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing book</h1>
+      <%= form_with model: @user, url: user_path, method: :patch do |f| %>
+        <div class="form-group">
+          <p>Name</p>
+          <%= f.text_field :name %>
+        </div>
+        <div class="form-group">
+          <p>Image</p>
+          <%= f.file_field :user_image, accept: "image/*"%>
+        </div>
+        <div class="form-group">
+          <p>Introduction</p>
+          <%= f.text_area :introduction %>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Update User', class:'btn btn-secondary' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
