--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,14 +2,23 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
-      <%= form_with model: @book, url: book_path, method: :put do |f| %>
+      <div class="error_explanation">
+        <% if @book.errors.any? %>
+          <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %>(error)</li>
+          <% end %>
+          </ul>
+        <% end %>
+      </div>
+      <%= form_with model: @book, url: book_path, method: :patch do |f| %>
         <div class="form-group">
           <p>Title</p>
           <%= f.text_field :title %>
         </div>
         <div class="form-group">
           <p>Opinion</p>
-          <%= f.text_area :opinion %>
+          <%= f.text_area :body %>
         </div>
         <div class="form-group">
           <%= f.submit 'Update Book', class:'btn btn-secondary' %>
