--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,21 +11,21 @@
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <%= image_tag current_user.get_user_image(100,100) %>
+      <%= image_tag @book.user.get_profile_image(100,100) %>
       <table class="table">
         <tbody>
           <tr>
             <th>name</th>
-            <th><%= current_user.name %></th>
+            <th><%= @book.user.name %></th>
           </tr>
           <tr>
             <th>introduction</th>
-            <th><%= current_user.introduction %></th>
+            <th><%= @book.user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class="row">
-        <%= link_to edit_user_path(current_user.id), class:'btn btn-outline-secondary btn-block' do %>
+        <%= link_to edit_user_path(@book.user.id), class:'btn btn-outline-secondary btn-block' do %>
           <i class="fas fa-user-cog"></i>
         <% end %>
       </div>
@@ -49,12 +49,12 @@
       <table class="table table-hover table-inverse">
         <tbody>
             <tr>
-              <td><%= link_to user_path(@book.user.id) do %><%= image_tag @book.user.get_user_image(80,80) %><br /><%= @book.user.name %><% end %></td>
-              <td><%= link_to book_path(@book.id) do %><%= book.title %><% end %></td>
+              <td><%= link_to user_path(@book.user.id) do %><%= image_tag @book.user.get_profile_image(80,80) %><br /><%= @book.user.name %><% end %></td>
+              <td><%= link_to book_path(@book.id) do %><%= @book.title %><% end %></td>
               <td><%= @book.body %></td>
               <% if @book.user == current_user %>
               <td><%= link_to 'Edit', edit_book_path(@book.id), class:'btn btn-sm btn-success ' %></td>
-              <td><%= link_to 'Destroy', book_path, method: :delete, class:'btn btn-sm btn-danger' %></td>
+              <td><%= link_to 'Destroy', book_path, method: :delete, data: {confirm: "本当に消しますか？"}, class:'btn btn-sm btn-danger' %></td>
               <% end %>
             </tr>
         </tbody>
