--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,16 @@
-
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h1>Editing book</h1>
+      <h1>User info</h1>
+      <div class="error_explanation">
+        <% if @user.errors.any? %>
+          <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %>(error)</li>
+          <% end %>
+          </ul>
+        <% end %>
+      </div>
       <%= form_with model: @user, url: user_path, method: :patch do |f| %>
         <div class="form-group">
           <p>Name</p>
@@ -10,7 +18,7 @@
         </div>
         <div class="form-group">
           <p>Image</p>
-          <%= f.file_field :user_image, accept: "image/*"%>
+          <%= f.file_field :profile_image, accept: "image/*"%>
         </div>
         <div class="form-group">
           <p>Introduction</p>
