--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,21 +11,21 @@
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <%= image_tag current_user.get_user_image(100,100) %>
+      <%= image_tag @user.get_profile_image(100,100) %>
       <table class="table">
         <tbody>
           <tr>
             <th>name</th>
-            <th><%= current_user.name %></th>
+            <th><%= @user.name %></th>
           </tr>
           <tr>
             <th>introduction</th>
-            <th><%= current_user.introduction %></th>
+            <th><%= @user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class="row">
-        <%= link_to edit_user_path(current_user.id), class:'btn btn-outline-secondary btn-block' do %>
+        <%= link_to edit_user_path(@user.id), class:'btn btn-outline-secondary btn-block' do %>
           <i class="fas fa-user-cog"></i>
         <% end %>
       </div>
@@ -58,7 +58,7 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= link_to book_path(book.id) do %><%= image_tag book.user.get_user_image(80,80) %><% end %></td>
+              <td><%= link_to book_path(book.id) do %><%= image_tag book.user.get_profile_image(80,80) %><% end %></td>
               <td><%= link_to book_path(book.id) do %><%= book.title %><% end %></td>
               <td><%= book.body %></td>
             </tr>
