--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,7 +30,7 @@
         <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book, url: books_path, method: :post do |f| %>
+      <%= form_with model: Book.new, url: books_path, method: :post do |f| %>
         <div class="form-group">
           <p>Title</p>
           <%= f.text_field :title %>
