--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
               <% else %>
                 <li><%= link_to root_path, class:'nav-link text-light' do %><i class="fas fa-home" aria-hidden="true"></i>Home<% end %></li>
                 <li><%= link_to about_path, class:'nav-link text-light' do %><i class="fas fa-link" aria-hidden="true"></i>About<% end %></li>
-                <li><%= link_to new_user_registration_path, class:'nav-link text-light' do %><i class="fas fa-user-plus" aria-hidden="true"></i>Sign in<% end %></li>
+                <li><%= link_to new_user_registration_path, class:'nav-link text-light' do %><i class="fas fa-user-plus" aria-hidden="true"></i>Sign up<% end %></li>
                 <li><%= link_to new_user_session_path, class:'nav-link text-light' do %><i class="fas fa-sign-in-alt" aria-hidden="true"></i>Log in<% end %></li>
               <% end %>
             </ul>
