--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -58,7 +58,7 @@
         <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= link_to book_path(book.id) do %><%= image_tag book.user.get_profile_image(80,80) %><% end %></td>
+              <td><%= link_to user_path(book.user_id) do %><%= image_tag book.user.get_profile_image(80,80) %><% end %></td>
               <td><%= link_to book_path(book.id) do %><%= book.title %><% end %></td>
               <td><%= book.body %></td>
             </tr>
