--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -13,11 +13,13 @@
           </tr>
         </tbody>
       </table>
+      <% unless user.guest_user? %>
       <div class="row">
         <%= link_to edit_user_path(current_user.id), class:'btn btn-outline-secondary btn-block' do %>
           <i class="fas fa-user-cog"></i>
         <% end %>
       </div>
+      <% end %>
       <h2 class="mt-3">New book</h2>
       <%= form_with model: Book.new, url: books_path, method: :post do |f| %>
         <div class="form-group">
