--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,8 +22,23 @@
             <th>introduction</th>
             <th><%= @book.user.introduction %></th>
           </tr>
+          <tr>
+            <th>follows</th>
+            <th><%= link_to follows_user_path(@book.user.id) do %><%= @book.user.followers.count %><% end %></th>
+          </tr>
+          <tr>
+            <th>followers</th>
+            <th><%= link_to followers_user_path(@book.user.id) do%><%= @book.user.followeds.count %><% end %></th>
+          </tr>
         </tbody>
       </table>
+      <% if current_user != @book.user %>
+        <% if current_user.following_users.include?(@book.user) %>
+            <%= link_to 'フォロー外す', user_relationships_path(@book.user.id), method: :delete, class:'btn btn-info ' %>
+        <% else %>
+             <%= link_to 'フォローする', user_relationships_path(@book.user.id), method: :post, class:'btn btn-success' %>
+        <% end %>
+      <% end %>
       <div class="row">
         <%= link_to edit_user_path(@book.user.id), class:'btn btn-outline-secondary btn-block' do %>
           <i class="fas fa-user-cog"></i>
