--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <%= render 'user', book: @book %>
+    <%= render 'user', book: @book, user: @user %>
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table table-hover table-inverse">
@@ -16,6 +16,13 @@
             <tr>
               <td><%= image_tag user.get_profile_image(80,80) %></td>
               <td><%= user.name %></td>
+              <% if current_user != user %>
+                <% if current_user.following_users.include?(user) %>
+                  <td><%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete %></td>
+                <% else %>
+                  <td><%= link_to 'フォローする', user_relationships_path(user.id), method: :post %></td>
+                <% end %>
+              <% end %>
               <td><%= link_to 'Show', user_path(user.id) %></td>
             </tr>
           <% end %>
