--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,6 +27,18 @@
               <td><%= link_to user_path(book.user_id) do %><%= image_tag book.user.get_profile_image(80,80) %><% end %></td>
               <td><%= link_to book_path(book.id) do %><%= book.title %><% end %></td>
               <td><%= book.body %></td>
+              <td>
+                <% if book.favorited_by?(current_user) %>
+                  <%= link_to book_favorites_path(book), method: :delete, class:'text-danger' do %>
+                    <i class="fa-solid fa-heart"></i><%= book.favorites.count %>
+                  <% end %>
+                <% else %>
+                  <%= link_to book_favorites_path(book), method: :post, class:'text-primary' do %>
+                    <i class="fa-solid fa-heart"></i><%= book.favorites.count %>
+                  <% end %>
+                <% end %>
+              </td>
+              <td>コメント数:<%= book.book_comments.count %></td>
             </tr>
           <% end %>
         </tbody>
