--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -67,16 +67,8 @@
               <td><%= link_to user_path(@book.user.id) do %><%= image_tag @book.user.get_profile_image(80,80) %><br /><%= @book.user.name %><% end %></td>
               <td><%= link_to book_path(@book.id) do %><%= @book.title %><% end %></td>
               <td><%= @book.body %></td>
-              <td>
-                <% if @book.favorited_by?(current_user) %>
-                  <%= link_to book_favorites_path(@book), method: :delete, class:'text-danger' do %>
-                    <i class="fa-solid fa-heart"></i><%= @book.favorites.count %>
-                  <% end %>
-                <% else %>
-                  <%= link_to book_favorites_path(@book), method: :post, class:'text-primary' do %>
-                    <i class="fa-solid fa-heart"></i><%= @book.favorites.count %>
-                  <% end %>
-                <% end %>
+              <td id="fav-book_<%= @book.id %>">
+                <%= render 'favorites/favorites', book: @book %>
               </td>
               <td>コメント数:<%= @book.book_comments.count %></td>
               <% if @book.user == current_user %>
@@ -86,25 +78,12 @@
             </tr>
         </tbody>
       </table>
-      <table class="table">
-        <% @comments.each do |book_comment| %>
-        <tr>
-            <td><%= link_to user_path(book_comment.user_id) do %>
-              <%= image_tag book_comment.user.get_profile_image(80,80) %><br>
-              <%= book_comment.user.name %>
-              <% end %>
-            </td>
-            <td><%= book_comment.comment %></td>
-            <% if book_comment.user_id == current_user.id %>
-              <td><%= link_to 'Destroy', book_book_comment_path(book_comment), method: :delete, class: "btn btn-sm btn-danger"%></td>
-            <% end %>
-        </tr>
-        <% end %>
-      </table>
-      <%= form_with model: @comment, url: book_book_comments_path(@book.id), local:true do |f| %>
-        <%= f.text_area :comment %>
-        <%= f.submit '送信' %>
-      <% end %>
+      <div id ="comment">
+        <%= render 'book_comments/comments' %>
+      </div>
+      <div id="form">
+        <%= render 'book_comments/form', comment: BookComment.new %>
+      </div>
     </div>
   </div>
 </div>
